--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,9 @@
     <jsp-config>
         <jsp-property-group>
             <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
             <include-prelude>/WEB-INF/jsp/taglibs.jsp</include-prelude>
+            <default-content-type>text/html</default-content-type>
         </jsp-property-group>
     </jsp-config>
 
