--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,14 @@
         <!--*********************************************************************************************************-->
 
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <!--*********************************************************************************************************-->
+
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
