--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,11 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <filter>
+        <filter-name>guestFilter</filter-name>
+        <filter-class>xyz.morlotti.escalade.GuestFilter</filter-class>
+    </filter>
+
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -18,6 +23,11 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
+    <filter-mapping>
+        <filter-name>guestFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
