--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,15 @@
         <filter-class>xyz.morlotti.escalade.GuestFilter</filter-class>
     </filter>
 
+    <filter>
+        <filter-name>utf8Filter</filter-name>
+        <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -26,6 +35,11 @@
 
     <filter-mapping>
         <filter-name>guestFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>utf8Filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
