--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,14 @@
 
         <!--*********************************************************************************************************-->
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
+
+        <!--*********************************************************************************************************-->
+
     </dependencies>
 
 </project>
